Still not working, problem may get fixed next commit

--- a/Neuronudge/templates/layout.html
+++ b/Neuronudge/templates/layout.html
@@ -203,7 +203,7 @@
 </main>
 
 <!-- Scroll to Top Button -->
-<button id="scrollTopBtn" title="Scroll to top" aria-label="Scroll to top">
+<button type="button" id="scrollTopBtn" title="Scroll to top" aria-label="Scroll to top">
     <i class="fa-solid fa-arrow-up"></i>
 </button>
 
